Right-align all time-tracking columns in Issues list (#43615).
Patch by Go MAEDA (user:maeda).


git-svn-id: https://svn.redmine.org/redmine/trunk@24233 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -369,6 +369,7 @@ table.list td {text-align:center; vertical-align:middle; padding-top: 3px; paddi
 table.list td.icon {width: 100%;} /* Prevents border from disappearing due to inline-flex shrinking */
 table.list td.id { width: 2%; text-align: center;}
 table.list td.name, table.list td.description, table.list td.subject, table.list td.parent-subject, table.list td.comments, table.list td.roles, table.list td.attachments, table.list td.text,  table.list td.short_description {text-align: left;}
+table.list td.estimated_hours, table.list td.total_estimated_hours, table.list td.estimated_remaining_hours, table.list td.spent_hours, table.list td.total_spent_hours {text-align: right;}
 
 table.list td.attachments span.attachment-filename {display: block; height: 16px;}
 table.list td.attachments span.attachment-filename a.icon-download {visibility: hidden;}
